proc-macros/tests/ui/incorrect/sub/sub_conflicting_alias.stderr
error: "hello_is_goodbye" is already defined
 --> tests/ui/incorrect/sub/sub_conflicting_alias.rs:6:11
  |
6 |     async fn async_method(&self) -> jsonrpsee::core::SubscriptionResult;
  |              ^^^^^^^^^^^^
